Fixed alignment issue in recentlyPlayed section

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -82,6 +82,7 @@ body {
 .recentGameCards {
     display: inline-block;
     width: 30rem;
+    height: 100%;
     margin: 0 10px;
 }
 
